--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
     <!-- custom JS -->
     <script src="/app.js" defer></script>
     <title>Pokedex-v1 | Rudresh</title>
+    <!-- favicon -->
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicon/favicon-16x16.png">
+    <link rel="manifest" href="./img/favicon/site.webmanifest">
 </head>
 <body>
     <div class="header">
